<resources>
    <string name="home">Home</string>
    <string name="hi_user">Hi,\u0020</string>
    <string name="sub_greeting">Welcome to AMFIT App</string>
    <string name="daily_steps">Daily steps</string>
    <string name="completed_workouts">Completed workouts</string>
    <string name="there_are_no_completed_workouts">There are no completed workouts</string>
    <string name="duration">Duration:\u0020</string>
    <string name="date">Date:\u0020</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="save">Save</string>
    <string name="sedentary">Sedentary (0 days)</string>
    <string name="light_activity">Light activity (1–3 days)</string>
    <string name="average_activity">Average activity (3–5 days)</string>
    <string name="high_activity">High activity (5–6 days)</string>
    <string name="very_high_activity">Very high activity (6–7 days)</string>
    <string name="weight_loss">Weight loss</string>
    <string name="maintenance">Maintenance</string>
    <string name="weight_gain">Weight gain</string>
    <string name="duration_no">Duration</string>
    <string name="volume">Volume</string>
    <string name="sets">Sets</string>
    <string name="choose_date">Select a date</string>
    <string name="correct">Enter the correct value</string>
    <string name="cancel">Cancel</string>
    <string name="user">User</string>
    <string name="congrats_steps">Congratulations! You have reached the step goal! 🎉</string>
    <string name="congrats_workouts">Great! You have reached your training goal! 🏋️</string>
    <string name="good_morning">Good Morning,\u0020</string>
    <string name="good_afternoon">Good Afternoon,\u0020</string>
    <string name="good_evening">Good Evening,\u0020</string>
    <string name="good_night">Good Night,\u0020</string>
    <string name="steps_count">Counting steps</string>
    <string name="step_counter_active">Pedometer is active</string>
    <string name="step_goal">Цель по шагам</string>
    <string name="step_change_goal">Изменить шаги</string>
    <string name="workouts_goal">Цель по тренировкам</string>
    <string name="workout_change_goal">Изменить тренировки</string>
</resources>