<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <EditText
            android:id="@+id/editAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number" />

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spinnerActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinnerGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>
