<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/material_text_view_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hi_user"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/material_text_view_sub_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_greeting"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        app:layout_constraintStart_toStartOf="@+id/material_text_view_greeting"
        app:layout_constraintTop_toBottomOf="@+id/material_text_view_greeting" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_card_view_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material_text_view_sub_greeting">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/circular_progress_indicator_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/material_text_view_steps"
                app:layout_constraintStart_toStartOf="@+id/material_text_view_steps"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/material_text_view_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="0/0"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toStartOf="@+id/guideline_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circular_progress_indicator_steps" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/material_text_view_sub_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_steps"
                android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                app:layout_constraintEnd_toEndOf="@+id/material_text_view_steps"
                app:layout_constraintStart_toStartOf="@+id/material_text_view_steps"
                app:layout_constraintTop_toBottomOf="@+id/material_text_view_steps" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/circular_progress_indicator_workouts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/material_text_view_workouts"
                app:layout_constraintStart_toStartOf="@+id/material_text_view_workouts"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/material_text_view_workouts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0/0"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/circular_progress_indicator_workouts" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/material_text_view_sub_workouts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_workouts"
                android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                app:layout_constraintEnd_toEndOf="@+id/material_text_view_workouts"
                app:layout_constraintStart_toStartOf="@+id/material_text_view_workouts"
                app:layout_constraintTop_toBottomOf="@+id/material_text_view_workouts" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/material_text_view_completed_workouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/completed_workouts"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material_card_view_stats" />
</androidx.constraintlayout.widget.ConstraintLayout>