<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootFragmentWorkoutStart"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_detailWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolBar_detailWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollEffect="compress"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:title=""
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/duration_no"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toStartOf="@+id/materialTextView_volume"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView_detailDurationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text=""
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView_duration"
                app:layout_constraintStart_toStartOf="@+id/materialTextView_duration"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView_duration" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/volume"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toStartOf="@+id/materialTextView_sets"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialTextView_duration"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView_detailVolumeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text=""
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView_volume"
                app:layout_constraintStart_toStartOf="@+id/materialTextView_volume"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView_volume" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView_sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sets"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialTextView_volume"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView_detailSetText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text=""
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView_sets"
                app:layout_constraintStart_toStartOf="@+id/materialTextView_sets"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView_sets" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_startWorkout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>